[gd_scene load_steps=7 format=2]

[ext_resource path="res://images/wallpaper/bg.png" type="Texture" id=1]
[ext_resource path="res://images/wallpaper/stars.png" type="Texture" id=2]
[ext_resource path="res://images/wallpaper/Starb.png" type="Texture" id=3]
[ext_resource path="res://images/wallpaper/winnerPopup.png" type="Texture" id=4]
[ext_resource path="res://Scene Code/win.gd" type="Script" id=5]
[ext_resource path="res://images/logo/super.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 300, 510 )
texture = ExtResource( 1 )

[node name="Win" type="Sprite" parent="."]
position = Vector2( 300, 540 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="Win"]
margin_left = -58.0
margin_top = 240.0
margin_right = 58.0
margin_bottom = 330.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Super" type="Sprite" parent="Win"]
position = Vector2( 4, 93 )
texture = ExtResource( 6 )

[node name="Star1" type="Sprite" parent="."]
position = Vector2( 169, 439 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 444, 440 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 306, 392 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Win/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
